fix(ui): fix TxModal overlap is viewport height is low

--- a/packages/polymath-ui/src/components/TxModal/style.scss
+++ b/packages/polymath-ui/src/components/TxModal/style.scss
@@ -109,6 +109,7 @@
 
   .pui-tx-row {
     display: flex;
+    flex-shrink: 0;
     margin-top: 6px;
     margin-bottom: 16px;
 
